# jinja-email-templates

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: __init__.py
src/engines/: __init__.py  sendgrid.py  smtp.py
templates/basic/comment-notification/: content.html.jinja
templates/basic/example/: content.html.jinja
templates/basic/invoice/: content.html.jinja
templates/basic/password-reset/: content.html.jinja
templates/basic/password-reset-help/: content.html.jinja
templates/basic/receipt/: content.html.jinja
templates/basic/trial-expired/: content.html.jinja
templates/basic/trial-expiring/: content.html.jinja
templates/basic/user-invitation/: content.html.jinja
templates/basic/welcome/: content.html.jinja
templates/core/: _footer.html.jinja  _style-full.html.jinja  _style-plain.html.jinja  _style.html.jinja  base.html.jinja
