[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "jinja-email-templates"
version = "0.1.0"
description = "Jinja templates for the postmark email templates"
authors = [ "Ramjee Ganti <code@ramjeeganti.com>",]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "3.7"

[tool.poetry.dev-dependencies]
